# mdcs

./: CMakeLists.txt  README.md
include/: mdcs-client.h  mdcs-service.h  mdcs.h
include/mdcs/: mdcs-client.h  mdcs-counters.h  mdcs-service.h  mdcs.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  hash_string.c  hash_string.h  mdcs-client.c  mdcs-config.cmake.in  mdcs-counter-type.h  mdcs-counter.h  mdcs-counters.c  mdcs-error.h  mdcs-global-data.h  mdcs-hash-string.c  mdcs-hash-string.h  mdcs-rpc-types.h  mdcs-rpc.c  mdcs-rpc.h  mdcs-service.c  rpc-types.h  rpc.c  rpc.h  uthash.h
test/: CMakeLists.txt  range-tracker.c  range-tracker.h  test_client.c  test_server.c
